# racket-embed-example

./: .gitignore  CMakeLists.txt  README.md  repl.c  test-vars.sh
rkt/: CMakeLists.txt  boot-racket.c  boot-racket.h  run.rkt  testi.rkt
